<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/dsdetail"
    tools:context=".Fragment_AlgorithmDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/black">

            <ImageView
                android:id="@+id/detailimage"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/cross"
                app:layout_collapseMode="parallax"
                />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Convolutional_Layer"
                android:textStyle="bold"
                android:textSize="25dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/body_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_description"
                android:textSize="18dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/sub_header_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_body_2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/body_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_body_2"
                android:textSize="18dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/sub_header_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_body_header_2"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/body_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_body_3"
                android:textSize="18dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/sub_header_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/body_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deep_learning"
                android:textSize="18dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/example_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cnn_body_header_3"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                />

<!--            <TextView-->
<!--                -->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/cnn_body_4"-->
<!--                android:textSize="18dp"-->
<!--                android:justificationMode="inter_word"-->
<!--                android:textColor="@color/black" />-->

            <io.github.kbiakov.codeview.CodeView
                android:id="@+id/example_body"
                android:layout_width="wrap_content"
                android:textSize="18dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deep_learning"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>